--- a/react-app/src/components/PageContainer/PageContainer.module.css
+++ b/react-app/src/components/PageContainer/PageContainer.module.css
@@ -1,10 +1,11 @@
 .container {
     width: 1600px;
     height: auto;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    background-color: white;
+    background-color: green;
     filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.16))
   }
