--- a/react-app/src/components/SearchSection/SearchSection.module.css
+++ b/react-app/src/components/SearchSection/SearchSection.module.css
@@ -7,3 +7,11 @@
     justify-content: center;
     align-items: center;
 }
+
+.formWrapper {
+    width: 950px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
