sign in and logout toggled

--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -3,6 +3,8 @@
   height: 55px;
   display: flex;
   justify-content: space-between;
+  position: absolute;
+  top: 0;
   align-items: center;
   background-color: #f7f7f7;
 }
@@ -17,7 +19,9 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 200px;
+  position: relative;
+  right: 50px;
+  width: 40%;
   justify-content: space-evenly;
   margin-right: 5px;
 }
