--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -1,5 +1,5 @@
 .container {
-  width: 100vw;
+  width: 100%;
   height: 55px;
   display: flex;
   justify-content: space-between;
@@ -20,9 +20,9 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  right: 50px;
-  width: 40%;
-  justify-content: space-evenly;
+  right: 0px;
+  width: 20%;
+  justify-content: space-between;
   margin-right: 5px;
 }
 
