--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -1,3 +1,8 @@
+* {
+  font-family: brandon-grotesque, sans-serif;
+  box-sizing: border-box;
+}
+
 .container {
   width: 100%;
   height: 55px;
@@ -9,10 +14,23 @@
   background-color: #f7f7f7;
 }
 
+/* @media only screen and (max-width: 1200px) {
+  .container {
+    width: 1200px;
+  }
+} */
+
 .container > div.logo {
   display: flex;
   justify-content: flex-start;
   padding-left: 40px;
+}
+
+.home_link {
+  text-decoration: none;
+  color: black;
+  font-family: brandon-grotesque, sans-serif;
+  font-weight: 600;
 }
 
 .right {
@@ -20,14 +38,17 @@
   justify-content: center;
   align-items: center;
   position: relative;
-  right: 15px;
-  width: 20%;
+  right: 2rem;
+  width: fit-content;
   justify-content: space-between;
-  margin-right: 5px;
 }
 
-.signup > a{
-  background-color: rgb(23, 23, 154);
+.right * {
+  margin-right: 0.5rem;
+}
+
+.signup > a {
+  background-color: #247f9e;
   color: white;
   text-decoration: none;
   border-radius: 2px;
@@ -38,7 +59,11 @@
   font-style: normal;
 }
 
-.signin > a{
+.signup > a:hover {
+    background-color: #2ba6ce;
+}
+
+.signin > a {
   text-decoration: none;
   border-radius: 2px;
   padding: 5px 10px;
