removed unused code that was causing warnings

--- a/react-app/src/components/SearchHeader/SearchHeader.module.css
+++ b/react-app/src/components/SearchHeader/SearchHeader.module.css
@@ -90,6 +90,10 @@
     width: 100px;
     border: none;
     max-height: 65px;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* .time_object table {
