adding some code to add hover on calendar

--- a/react-app/src/components/SearchHeader/SearchHeader.module.css
+++ b/react-app/src/components/SearchHeader/SearchHeader.module.css
@@ -40,6 +40,9 @@
     color: red
 }
 
+.react-calendar__tile.react-calendar__month-view__days__day {
+    color: red;
+}
 
 .search_box_field {
     height: 100%;
