aded functional search query

--- a/react-app/src/components/Modal/Modal.css
+++ b/react-app/src/components/Modal/Modal.css
@@ -12,8 +12,8 @@
 }
 
 .modal-content {
-    height: 40vh;
-    width: 40vw;
+    /* height: 40vh;
+    width: 40vw; */
     background-color: white;
     display: flex;
     justify-content: center;
