--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -1,8 +1,3 @@
-* {
-  font-family: brandon-grotesque, sans-serif;
-  box-sizing: border-box;
-}
-
 .container {
   width: 100%;
   height: 55px;
@@ -65,6 +60,14 @@
   font-style: normal;
   cursor: pointer;
   transition: all 0.3s linear;
+}
+
+.profile_icon {
+  cursor: pointer;
+}
+
+.calendar_icon {
+  cursor: pointer;
 }
 
 .signup:hover {
