--- a/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
+++ b/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
@@ -5,7 +5,6 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
-    position: absolute;
     align-items: center;
     filter: drop-shadow(0 3px 6px rgba(0, 0, 0, 0.16))
 }
@@ -30,4 +29,9 @@
     display: flex;
     border: black 1px solid;
     flex-direction: column;
+}
+
+.form_container {
+    display:flex;
+    flex-direction: row;
 }
