--- a/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
+++ b/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
@@ -1,7 +1,7 @@
 .container {
     width: 1200px;
     height: auto;
-    margin: 50px auto;
+    margin-top: 0;
     display: flex;
     flex-direction: row;
     justify-content: space-between;
@@ -11,6 +11,10 @@
 
 .header {
     margin-bottom: 20px;
+}
+
+.legend {
+
 }
 
 .form_entries {
@@ -40,8 +44,9 @@
     width: 300px
 }
 .right_entries {
-    width: 400px;
+    width: 300px;
     align-items: center;
+    margin: 0 auto;
 
 }
 
