Still working on footer

--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -47,6 +47,15 @@
 
 }
 
+.projectDescription {
+    display: flex;
+    flex-direction: row;
+}
+
+.descriptions {
+    display: flex;
+    flex-direction: row;
+}
 
 
 .linkedIn {
