--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@
   top: 0;
   align-items: center;
   background-color: #f7f7f7;
+  z-index: 99;
 }
 
 /* @media only screen and (max-width: 1200px) {
