--- a/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
+++ b/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
@@ -44,6 +44,10 @@
     text-align: center;
 }
 
+.sr_content h3 {
+    margin-top: 50px;
+}
+
 .content_sub_header1 {
     margin-bottom: 10px;
     width: 100%;
@@ -107,4 +111,27 @@
 
 .address_text {
     margin-bottom: 20px;
+}
+
+.review_bars_parent {
+    width: 100%;
+    height: 200px;
+    background-color: green;
+    display: grid;
+    grid-template-columns: 30% 70%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: space-evenly;
+}
+
+.whole_bar {
+    background-color: white;
+    border: 1px solid black;
+    width: 50%;
+    height: 20px;
+    margin-bottom: 10px;
+}
+
+.all_review_bars {
+    margin-left: 20px;
 }
