--- a/react-app/src/components/ReservationCard/ReservationCard.module.css
+++ b/react-app/src/components/ReservationCard/ReservationCard.module.css
@@ -1,7 +1,7 @@
 .form {
     width: 250px;
     height: 380px;
-    border: 1px solid grey;
+    border: 1px solid #E1E1E1;
     border-radius: 5px;
     display: flex;
     flex-direction: column;
@@ -14,10 +14,11 @@
 }
 
 hr {
-    height: 1px;
+    height: 0.5px;
     width: 200px;
-    background-color: lightgrey;
+    background-color: #C7C7C7;
     margin-top: -10px;
+    opacity: 50%;
 }
 
 p {
