--- a/react-app/src/components/Modal/Modal.css
+++ b/react-app/src/components/Modal/Modal.css
@@ -9,6 +9,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    z-index: 101;
 }
 
 .modal-content {
@@ -19,4 +20,5 @@
     justify-content: center;
     align-items: center;
     opacity: 1;
+    z-index: 104;
 }
