fixed stuff to remove warnings

--- a/react-app/src/Forms/ReservationForm/ReservationForm.module.css
+++ b/react-app/src/Forms/ReservationForm/ReservationForm.module.css
@@ -47,7 +47,7 @@ p {
 
 button {
     width: 200px;
-    height: 30px;
+    /* height: 30px; */
     color: white;
     background-color: #983937;
     opacity: 50%;
