--- a/react-app/src/components/ReviewCounter/ReviewCounter.module.css
+++ b/react-app/src/components/ReviewCounter/ReviewCounter.module.css
@@ -4,7 +4,7 @@
     background-color: white;
     border: 1px solid black;
     display: flex;
-    justify-content: start;
+    justify-content: flex-start;
 }
 
 .red_bar {
