--- a/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
+++ b/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
@@ -1,21 +1,29 @@
 .container {
-  background-color: green;
-  width: 100%;
+  background-color: white;
+  width: 800px;
+  display: grid;
+  gap: 5px;
 }
 
 .singleReview {
-  background-color: orange;
+  background-color: white;
   border-bottom: 1px solid black;
   display: grid;
-  grid-template-columns: 100px 200px repeat(2, 0) 500px;
-  grid-template-rows: repeat(2, 100px) repeat(3, 0);
+  grid-template-columns: 100px 130px repeat(2, 0) 500px;
+  grid-template-rows: 80px 70px repeat(3, 0);
   grid-column-gap: 0px;
   grid-row-gap: 0px;
 }
 
+.iconContainer {
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+}
+
 .icon {
   grid-area: 1 / 1 / 2 / 2;
-  border: 1px solid black;
+  color: white;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -28,13 +36,16 @@
 .nameAndCount {
   grid-area: 2 / 1 / 3 / 2;
   display:flex;
-  justify-content: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
 }
 
 .image {
   grid-area: 1 / 2 / 3 / 4;
-  height: 200px;
-  width: 200px;
+  object-fit: cover;
+  height: 125px;
+  width: 125px;
   border-radius: 20px;
 }
 
@@ -42,6 +53,21 @@
   grid-area: 2 / 4 / 3 / 6;
 }
 
-.rating {
+.stars {
   grid-area: 1 / 4 / 2 / 6;
+  display: flex;
+  align-items: flex-end;
+  color: #FC6260
+}
+
+.reviewCount {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 85px;
+  justify-content: space-between;
+}
+
+.imageContainer {
+  padding-top: 15px;
 }
