--- a/react-app/src/components/SearchHeader/SearchHeader.module.css
+++ b/react-app/src/components/SearchHeader/SearchHeader.module.css
@@ -115,7 +115,7 @@
     margin-left: 20px;
     border: none;
     border-radius: 5px;
-    width: 100px;
+    width: 6rem;
     background-color: #da3743;
     color: white;
     transition: all linear 0.3s;
