--- a/react-app/src/components/SearchHeader/SearchHeader.module.css
+++ b/react-app/src/components/SearchHeader/SearchHeader.module.css
@@ -119,6 +119,11 @@
     background-color: #da3743;
     color: white;
     transition: all linear 0.3s;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 16px;
 }
 
 .search_button:hover {
