fixed search results

--- a/react-app/src/components/SearchResults/SearchResults.module.css
+++ b/react-app/src/components/SearchResults/SearchResults.module.css
@@ -52,6 +52,7 @@
     width: 600px;
     background-color: white;
     transition: all ease-out 0.25s;
+    cursor: pointer;
 }
 
 .each_wrapper:hover {
