--- a/react-app/src/components/DeleteRestaurant/UpdateRestaurant.module.css
+++ b/react-app/src/components/DeleteRestaurant/UpdateRestaurant.module.css
@@ -1,11 +1,17 @@
 .update_button {
-    color: red;
+    color: rgb(255, 255, 255);
     font-size: 16px;
     font-weight: 400;
-    width: 100%;
+    cursor: pointer;
+    justify-content: center;
+    text-align: center;
+    margin-bottom: 20px;
+    padding: 5px;
+    background-color: rgb(41, 41, 41);
+    border-radius: 3px;
   }
 
   .update_button:hover {
-    color: black;
-    background-color: rgba(0,0,0,.03);
+    color: white;
+    background-color: #7D2C3B;
   }
