--- a/react-app/src/components/LogoutButton/Logout.module.css
+++ b/react-app/src/components/LogoutButton/Logout.module.css
@@ -3,6 +3,9 @@
   font-size: 16px;
   font-weight: 400;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 5px;
 }
 
 .logout_button:hover {
