--- a/react-app/src/components/Footer/Footer.module.css
+++ b/react-app/src/components/Footer/Footer.module.css
@@ -1,12 +1,14 @@
 .footer {
     background-color: #24599D;
-    width: 1600px;
+    width: 100%;
     height: 260px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    z-index: 100;
+    /* z-index: 100; */
+    position: absolute;
+    bottom: 0;
 }
 
 .container {
@@ -25,6 +27,10 @@
     flex-direction: row;
     justify-content: flex-start;
     align-items: top;
+}
+
+.devicons {
+    font-size: 30px;
 }
 
 .linksBox {
