--- a/react-app/src/Forms/ReservationForm/ReservationForm.module.css
+++ b/react-app/src/Forms/ReservationForm/ReservationForm.module.css
@@ -7,6 +7,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+    background-color: white;
 }
 
 .title {
