--- a/react-app/src/Forms/ReviewForm/ReviewForm.module.css
+++ b/react-app/src/Forms/ReviewForm/ReviewForm.module.css
@@ -1,5 +1,14 @@
+.review_form_parent {
+  display: flex;
+  flex-direction: column;
+  /* background-color: green; */
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+}
+
 .content {
-    width: 590px;
+    width: 100%;
     height: 100px;
     border: 1px solid grey;
     grid-area: 1 / 2 / 2 / 3;
@@ -16,7 +25,8 @@
 
 .reviewContainer {
   height: 250px;
-  width: 800px;
+  /* width: 800px; */
+  width: 100%;
   display: grid;
   grid-template-columns: 200px 350px repeat(2, 125px) 0;
   grid-template-rows: repeat(2, 50px) 100px 50px 0;
@@ -68,6 +78,13 @@
   align-items: center;
 }
 
+.div4 select {
+  background-color: rgb(46, 46, 46);
+  color: white;
+  padding: 5px;
+  border-radius: 5px;
+}
+
 .div5 {
   /* border: 2px solid black; */
   grid-area: 3 / 2 / 4 / 5;
@@ -117,6 +134,18 @@
   justify-content: center;
   align-items: center;
   border-radius: 8px;
+  cursor: pointer;
+}
+
+.reset,
+.submit {
+  transition: all linear 0.25s;
+}
+
+.reset:hover,
+.submit:hover {
+  background-color: #6b6a6a;
+  color: white;
 }
 
 .submit {
@@ -126,10 +155,12 @@
   justify-content: center;
   align-items: center;
   border-radius: 8px;
+  cursor: pointer;
 }
 
 .image {
   border-radius: 8px;
+  object-fit: cover;
   /* object-fit:fill */
 }
 
