--- a/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
+++ b/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
@@ -1,6 +1,8 @@
 .sr_custom_pc {
     background-color: grey !important;
     filter: none !important;
+    height: 100% !important;
+    /* background-color: red !important; */
 }
 
 .sr_banner {
@@ -128,4 +130,14 @@
 .horiz_line {
     width: 100%;
     margin: 25px 0;
+}
+
+.review_parent_container {
+    background-color: white;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    position: absolute;
+    top: 680px;
+    margin: 20px;
 }
