--- a/react-app/src/Forms/ReviewForm/ReviewForm.module.css
+++ b/react-app/src/Forms/ReviewForm/ReviewForm.module.css
@@ -216,6 +216,17 @@
   opacity: 1;
 }
 
+.error_container {
+    background-color: #c1c1c1;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    padding: 5px;
+    margin: 15px 0;
+    width: 100%;
+}
+
 /* .starsContainer label:nth-child(1):checked ~ label:nth-of-type(-n + 1),
 .starsContainer label:nth-child(2):checked ~ label:nth-of-type(-n + 2),
 .starsContainer label:nth-child(3):checked ~ label:nth-of-type(-n + 3),
