--- a/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
+++ b/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
@@ -137,6 +137,8 @@
     width: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     top: 680px;
     margin: 20px;
