--- a/react-app/src/components/Navbar/Navbar.module.css
+++ b/react-app/src/components/Navbar/Navbar.module.css
@@ -1,13 +1,13 @@
 .container {
-  width: 100%;
+  width: 1600px;
   height: 55px;
   display: flex;
+  flex-direction: row;
   justify-content: space-between;
-  position: absolute;
-  top: 0;
+  position: sticky;
+  position: -webkit-sticky;
   align-items: center;
   background-color: #f7f7f7;
-  z-index: 99;
 }
 
 /* @media only screen and (max-width: 1200px) {
@@ -33,6 +33,8 @@
 
 .home_link span {
   margin-left: 10px;
+  font-size: 1.25rem;
+  font-weight: 900;
 }
 
 .right {
