updated some button formatting

--- a/react-app/src/Forms/DeleteRestaurantForm/DeleteRestaurantForm.module.css
+++ b/react-app/src/Forms/DeleteRestaurantForm/DeleteRestaurantForm.module.css
@@ -1,19 +1,22 @@
 .button {
-    height: 45px;
-    width: 100px;
-    color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: #983937;
-    border-radius: 5px;
-    font-weight: 600;
-    margin-left: 20px;
-  }
+  height: 45px;
+  width: 100px;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #983937;
+  border-radius: 5px;
+  font-weight: 600;
+  margin-left: 20px;
+  transition: all 0.3s ease 0s;
 
-  .button:hover {
-    cursor: pointer;
-  }
+}
+
+.button:hover {
+  cursor: pointer;
+  background-color: #24599D
+}
 
   .button_container {
     display: flex;
