--- a/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
+++ b/react-app/src/Forms/RestaurantForm/RestaurantForm.module.css
@@ -117,8 +117,11 @@
     border-radius: 5px;
     font-weight: 600;
     margin-left: 20px;
-}
+    transition: all 0.3s ease 0s;
 
-.button:hover {
+  }
+
+  .button:hover {
     cursor: pointer;
-}
+    background-color: #24599D
+  }
