--- a/react-app/src/components/UpdateRestaurant/UpdateRestaurant.module.css
+++ b/react-app/src/components/UpdateRestaurant/UpdateRestaurant.module.css
@@ -9,8 +9,11 @@
   border-radius: 5px;
   font-weight: 600;
   margin-left: 20px;
+  transition: all 0.3s ease 0s;
+
 }
 
 .button:hover {
   cursor: pointer;
+  background-color: #24599D
 }
