--- a/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
+++ b/react-app/src/components/SingleRestaurant/SingleRestaurant.module.css
@@ -143,3 +143,17 @@
     top: 680px;
     margin: 20px;
 }
+
+.favorite_container {
+    display: flex;
+    flex-direction: row;
+    padding: 20px;
+    font-weight: 500;
+    transform: scale(1.2);
+}
+.favorite_star {
+    margin-right: 10px;
+}
+.favorite_star:hover {
+    cursor: pointer
+}
